--- a/templates/index.html
+++ b/templates/index.html
@@ -582,8 +582,17 @@
 
         <!-- Top Ad Banner -->
         <div class="ad-space ad-banner-top">
-            <!-- ADSTERRA ÜST BANNER KODU BURAYA -->
-            Reklam Alanı (728x90)
+                        <!-- ADSTERRA ÜST BANNER KODU BURAYA -->
+                        <script type="text/javascript">
+                atOptions = {
+                    'key' : '40e9dd09d54dd283b0ac4ed734668d1d',
+                    'format' : 'iframe',
+                    'height' : 90,
+                    'width' : 728,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/40e9dd09d54dd283b0ac4ed734668d1d/invoke.js"></script>
         </div>
 
         <!-- Main Layout -->
@@ -625,7 +634,16 @@
                         <!-- In-content Ad -->
                         <div class="ad-space" style="margin: 20px 0;">
                             <!-- ADSTERRA İÇERİK İÇİ REKLAM KODU BURAYA -->
-                            Reklam Alanı (İçerik İçi)
+                            <script type="text/javascript">
+                                atOptions = {
+                                    'key' : '154ecef40da418a15deb3299c42fd00e',
+                                    'format' : 'iframe',
+                                    'height' : 250,
+                                    'width' : 300,
+                                    'params' : {}
+                                };
+                            </script>
+                            <script type="text/javascript" src="//www.highperformanceformat.com/154ecef40da418a15deb3299c42fd00e/invoke.js"></script>
                         </div>
 
                         <a class="btn btn-success" id="download-btn" download="pinterest-video.mp4">
@@ -753,7 +771,16 @@
                 <!-- Bottom Ad Banner -->
                 <div class="ad-space ad-banner-bottom" style="margin-top: 40px;">
                     <!-- ADSTERRA ALT BANNER KODU BURAYA -->
-                    Reklam Alanı (728x90)
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key' : '40e9dd09d54dd283b0ac4ed734668d1d',
+                            'format' : 'iframe',
+                            'height' : 90,
+                            'width' : 728,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.highperformanceformat.com/40e9dd09d54dd283b0ac4ed734668d1d/invoke.js"></script>
                 </div>
             </div>
 
@@ -761,7 +788,16 @@
             <div class="sidebar">
                 <div class="ad-space ad-sidebar">
                     <!-- ADSTERRA SIDEBAR KODU BURAYA -->
-                    Reklam Alanı<br>(300x250)
+                   <script type="text/javascript">
+                        atOptions = {
+                            'key' : '154ecef40da418a15deb3299c42fd00e',
+                            'format' : 'iframe',
+                            'height' : 250,
+                            'width' : 300,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.highperformanceformat.com/154ecef40da418a15deb3299c42fd00e/invoke.js"></script>
                 </div>
             </div>
         </div>
