--- a/templates/index_ar.html
+++ b/templates/index_ar.html
@@ -15,11 +15,14 @@
     <meta name="twitter:title" content="📌 تنزيل فيديو Pinterest">
     <meta name="twitter:description" content="أصبح تنزيل مقاطع الفيديو من Pinterest سهلاً للغاية!">
     
+    <!-- Canonical Tag -->
+    <link rel="canonical" href="https://pindownloader.site/ar/" />
+    
     <!-- Hreflang Tags -->
-    <link rel="alternate" hreflang="tr" href="{{ request.scheme }}://{{ request.get_host }}/" />
-    <link rel="alternate" hreflang="en" href="{{ request.scheme }}://{{ request.get_host }}/en/" />
-    <link rel="alternate" hreflang="ar" href="{{ request.scheme }}://{{ request.get_host }}/ar/" />
-    <link rel="alternate" hreflang="x-default" href="{{ request.scheme }}://{{ request.get_host }}/" />
+    <link rel="alternate" hreflang="tr" href="https://pindownloader.site/" />
+    <link rel="alternate" hreflang="en" href="https://pindownloader.site/en/" />
+    <link rel="alternate" hreflang="ar" href="https://pindownloader.site/ar/" />
+    <link rel="alternate" hreflang="x-default" href="https://pindownloader.site/" />
     
     <title>تنزيل فيديو Pinterest - تنزيل مجاني</title>
 
